# my-arithmetic-bhuchon

./: .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: actions.yml
src/my_arithmetic_bhuchon/: __about__.py  __init__.py  pgcd.py
tests/: __init__.py  test_pgcd.py
