[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "my-arithmetic-bhuchon"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Huchon Baptiste", email = "baptiste.huchon@ikmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Huchon Baptiste/my-arithmetic-bhuchon#readme"
Issues = "https://github.com/Huchon Baptiste/my-arithmetic-bhuchon/issues"
Source = "https://github.com/Huchon Baptiste/my-arithmetic-bhuchon"

[tool.hatch.version]
path = "src/my_arithmetic_bhuchon/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_arithmetic_bhuchon tests}"

[tool.coverage.run]
source_pkgs = ["my_arithmetic_bhuchon", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic_bhuchon/__about__.py",
]

[tool.coverage.paths]
my_arithmetic_bhuchon = ["src/my_arithmetic_bhuchon", "*/my-arithmetic-bhuchon/src/my_arithmetic_bhuchon"]
tests = ["tests", "*/my-arithmetic-bhuchon/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest", 
]

[tool.hatch.envs.test.scripts]
test = "pytest tests/"
